<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/today"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_thisweek"
        android:orderInCategory="100"
        android:title="@string/thisweek"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_thismonth"
        android:orderInCategory="100"
        android:title="@string/thismonth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_thisyear"
        android:orderInCategory="100"
        android:title="@string/thisyear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alltime"
        android:orderInCategory="100"
        android:title="@string/alltime"
        app:showAsAction="never" />
</menu>
